# torch-tiltxcorr

./: README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
examples/: benchmark_vs_IMOD_on_bin1MC_lamella.ipynb  benchmark_vs_imod_on_shrec21.ipynb  tiltxcorr_example_simulated_data.py  tiltxcorr_with_sample_tilt_estimation.py
src/torch_tiltxcorr/: __init__.py  tiltxcorr.py  tiltxcorr_no_stretch.py  tiltxcorr_with_pretilt_offset.py  tiltxcorr_with_sample_tilt_estimation.py  utils.py  xcorr.py
tests/: test_tiltxcorr_with_sample_tilt_estimation.py  test_torch_tiltxcorr.py
